--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -5,10 +5,10 @@
     android:id="@+id/constraint_layout_add"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.add.AddFragment">
+    tools:context=".fragments.update.UpdateFragment">
 
     <EditText
-        android:id="@+id/etFirstName"
+        android:id="@+id/etUpdateFirstName"
         android:layout_width="312dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etLastName"
+        android:id="@+id/etUpdateLastName"
         android:layout_width="312dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -27,10 +27,10 @@
         android:hint="@string/enter_last_name"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateFirstName" />
 
     <EditText
-        android:id="@+id/etAge"
+        android:id="@+id/etUpdateAge"
         android:layout_width="312dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -38,7 +38,7 @@
         android:hint="@string/enter_age"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/etLastName" />
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateLastName" />
 
     <Button
         android:id="@+id/btnUpdate"
@@ -46,9 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="112dp"
         android:layout_marginTop="40dp"
-        android:text="@string/btn_add"
+        android:text="@string/btn_update"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/etAge" />
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateAge" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
